--- a/ghazimoradi-q3-1/3/index.html
+++ b/ghazimoradi-q3-1/3/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <input id="text-input" type="text">
    <script src="script.js"></script> 
 </body>
 </html>
