--- a/ghazimoradi-q3-1/4/index.html
+++ b/ghazimoradi-q3-1/4/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <ul id="list">
+        <li>a</li>
+        <li>b</li>
+        <li>ab</li>
+        <li>arman</li>
+        <li>hello world</li>
+    </ul>
+    <input id="search-input" type="text">
    <script src="script.js"></script> 
 </body>
 </html>
